paperless-ngx/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-route
  namespace: app-internal
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: infrastructure
      sectionName: websecure
  hostnames:
    - "docs.mikey-liang.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-ngx
          port: 8000
